--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -68,7 +68,7 @@
 
 
  <!-- Nav Item - Utilities Collapse Menu -->
- <li class="nav-item">
+ <!-- <li class="nav-item">
     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
         aria-expanded="true" aria-controls="collapseUtilities">
         <i class="fas fa-fw fa-wrench"></i>
@@ -82,42 +82,54 @@
         </div>
 
     </div>
-</li>
+</li> -->
 
 
 
 
 
-            <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-                    aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Consultar Datos   </span>
-                </a>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="{{ url_for('persona.personaIndex') }}">Persona</a>
-                        <a class="collapse-item" href="{{ url_for('sexo.sexoIndex') }}">Sexo</a>
-                        <a class="collapse-item" href="{{ url_for('ocupacion.ocupacionIndex') }}">Ocupación</a> 
-                        <a class="collapse-item" href="{{ url_for('estadocivil.estadocivilIndex') }}">Estado Civil</a>   
-                        <a class="collapse-item" href="{{ url_for('ciudad.ciudadIndex') }}">Ciudad</a>
-                        <a class="collapse-item" href="{{ url_for('pais.paisIndex') }}">Pais</a>
-                        <a class="collapse-item" href="{{ url_for('nacionalidad.nacionalidadIndex') }}">Nacionalidad</a>
-                        <hr class="sidebar-divider">
-                        <a class="collapse-item" href="{{ url_for('dia.diaIndex') }}">Dia</a> 
-                        <a class="collapse-item" href="{{ url_for('turno.turnoIndex') }}">turno</a>
-                        <a class="collapse-item" href="{{ url_for('estadocita.estadocitaIndex') }}">Estado de la Cita</a> 
-                        <a class="collapse-item" href="{{ url_for('especialidad.especialidadIndex') }}">Especialidad</a> 
-                        <a class="collapse-item" href="{{ url_for('duracionconsulta.duracionconsultaIndex') }}">Duracion de consulta</a> 
-                        <a class="collapse-item" href="{{ url_for('instrumento.instrumentoIndex') }}">Test Utilizados</a> 
-                        <a class="collapse-item" href="{{ url_for('diagnostico.diagnosticoIndex') }}">Diagnóstico</a> 
-                        <a class="collapse-item" href="{{ url_for('tratamiento.tratamientoIndex') }}">Tratamientos</a>   
-                     
-                    </div>
+          <!-- Nav Item - Pages Collapse Menu -->
+          <li class="nav-item">
+            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
+                aria-expanded="true" aria-controls="collapseTwo">
+                <i class="fas fa-fw fa-cog"></i>
+                <span>Referenciales</span>
+            </a>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                <div class="bg-white py-2 collapse-inner rounded">
+                    <a class="collapse-item" href="{{ url_for('ciudad.ciudadIndex') }}">Ciudad</a>
+                    <a class="collapse-item" href="{{ url_for('pais.paisIndex') }}">Pais</a>
+                    <a class="collapse-item" href="{{ url_for('nacionalidad.nacionalidadIndex') }}">Nacionalidad</a>
+                    <a class="collapse-item" href="{{ url_for('ocupacion.ocupacionIndex') }}">Ocupación</a>
+                    <a class="collapse-item" href="{{ url_for('estadocivil.estadocivilIndex') }}">Estado Civil</a>
+                    <a class="collapse-item" href="{{ url_for('estadocita.estadocitaIndex') }}">Estado de la Cita</a> 
+                    <a class="collapse-item" href="{{ url_for('persona.personaIndex') }}">Persona</a>
+                    <a class="collapse-item" href="{{ url_for('especialidad.especialidadIndex') }}">Especialidad</a>   
+                    <a class="collapse-item" href="{{ url_for('dia.diaIndex') }}">Dia</a>
+                    <a class="collapse-item" href="{{ url_for('duracionconsulta.duracionconsultaIndex') }}">Duración de la Consulta</a>  
+                    <a class="collapse-item" href="{{ url_for('instrumento.instrumentoIndex') }}">Instrumento Utilizado (test)</a>
+                    <a class="collapse-item" href="{{ url_for('turno.turnoIndex') }}">Turno</a>   
+                    <a class="collapse-item" href="{{ url_for('tratamiento.tratamientoIndex') }}">Tratamiento</a>
+                    <a class="collapse-item" href="{{ url_for('diagnostico.diagnosticoIndex') }}">Diagnóstico</a>      
                 </div>
-            </li>
+            </div>
+        </li>
 
+        <!-- Nav Item - Utilities Collapse Menu -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+                aria-expanded="true" aria-controls="collapseUtilities">
+                <i class="fas fa-fw fa-wrench"></i>
+                <span class="text-wrap">Gestionar Compra</span>
+            </a>
+            <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
+                data-parent="#accordionSidebar">
+                <div class="bg-white py-2 collapse-inner rounded">
+                <a class="collapse-item" href="{{ url_for('pdcmod.pedidos_index') }}">Registrar pedido de compras</a>
+                    
+                </div>
+            </div>
+        </li>
 
 
 
@@ -148,24 +160,6 @@
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                         <i class="fa fa-bars"></i>
                     </button>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
